--- a/src/Homepage/HomePage.css
+++ b/src/Homepage/HomePage.css
@@ -17,7 +17,7 @@
 
 .start-btn {
     background-color:rgba(243, 166, 131,0.5);
-    color: rgba(99, 110, 114,1.0); 
+    color: rgb(78, 89, 94); 
     font-weight: 500;
     font-size: 28px;
     border-radius: 15px; 
