--- a/src/Homepage/HomeTitle.css
+++ b/src/Homepage/HomeTitle.css
@@ -13,7 +13,7 @@
 }
 
 .home-subtitle {
-    color: rgba(119, 139, 235,0.85); 
+    color: rgb(121, 119, 185);
 }
 
 
