--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -10,12 +10,12 @@
 } 
 
 .navbar-links {
-  color:rgba(130, 88, 159,1.0);
+  color:rgb(121, 119, 185);
   /* rgba(119, 139, 235,0.8) ; */
 }
 
 .navbar-links:hover {
-  color: rgba(87, 75, 144,1.0);
+  color:rgb(121, 119, 185);
 }
 
 .navbar-text, .navbar-text:hover {
@@ -25,7 +25,7 @@
 }
 
 .active {
-  color: rgba(130, 88, 159,1.0);
+  color: rgb(133, 86, 167);
   font-weight: bold; 
   text-decoration: none;
 }
