--- a/src/Quiz/Quiz.css
+++ b/src/Quiz/Quiz.css
@@ -27,7 +27,7 @@
 
 .submit-btn {
    display: block;
-   color: rgb(99, 110, 114);
+   color: rgb(80, 91, 95);
    margin: 5% auto;
    border: 1px solid rgb(99, 110, 114);
    border-radius: 5px;
